# testino

./: .gitignore  CHANGELOG.txt  LICENCE.TXT  LICENSE  MANIFEST.in  README  README.md  __metadata__.py  _boring  circle.yml  fabfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  testino.py  tox.ini
doc/: Makefile  conf.py  index.rst
flea/: __init__.py
tests/: requirements.txt  test.py  test_asgi_app.py  test_element_wrapper.py  test_form.py  test_test_agent.py  test_testino.py  test_wsgi_apps.py
