[project]
name = "testino"
version = "0.3.14"
description = "Test ASGI/WSGI applications using lxml"
authors = [
    {name = "Ed Singleton", email = "singletoned@gmail.com"},
]
dependencies = [
    "cssselect>=1",
    "lxml>=3.7",
    "parsel>=1.1",
    "requests-wsgi-adapter>=0.2",
    "requests>=2",
    "werkzeug>=0.12",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "BSD"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/Singletoned/testino"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310','py311']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
